--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.34",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux-logger": "^3.0.6",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
